--- a/DockerFile
+++ b/DockerFile
@@ -5,7 +5,7 @@ FROM openjdk:17-jdk-slim
 WORKDIR /app
 
 # Copy the Maven build file to the container
-COPY target/fleet_manager-0.0.1-SNAPSHOT.jar app.jar
+COPY ./target/fleet_manager-0.0.1-SNAPSHOT.jar /app
 
 # Expose the port your Spring Boot application runs on
 EXPOSE 8080
