--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,6 @@ logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
 logging.file.name=vehicle-inventory.logspring.application.name=fleet-manager
 
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.h2.console.enabled=true
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-##spring.jpa.hibernate.ddl-auto=update
-
 # MySQL Database Configuration
 #spring.datasource.url=jdbc:mysql://localhost:3306/fleet_manager?useSSL=false&allowPublicKeyRetrieval=true
 #spring.datasource.username=root
@@ -21,10 +13,10 @@ logging.file.name=vehicle-inventory.logspring.application.name=fleet-manager
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://fleetmanager.cb8yaoqcqd1e.us-east-2.rds.amazonaws.com:3306/fleet_manager?useSSL=false&allowPublicKeyRetrieval=true
-#spring.datasource.url=jdbc:mysql://localhost:3306/fleet_manager?useSSL=false&allowPublicKeyRetrieval=true
+#spring.datasource.url=jdbc:mysql://fleetmanager.cb8yaoqcqd1e.us-east-2.rds.amazonaws.com:3306/fleet_manager?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/fleet_manager?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=Ded12jky+
+spring.datasource.password=
 
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
@@ -41,5 +33,10 @@ logging.level.org.springframework=INFO
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+logging.level.org.springframework.cache=DEBUG
+
+management.endpoints.web.base-path=/inventory
+management.endpoints.web.path-mapping.health=apphealth
 
 
