--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ logging.file.name=vehicle-inventory.logspring.application.name=fleet-manager
 #spring.datasource.url=jdbc:mysql://fleetmanager.cb8yaoqcqd1e.us-east-2.rds.amazonaws.com:3306/fleet_manager?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.url=jdbc:mysql://localhost:3306/fleet_manager?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Pranjal@23
 
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
