--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,16 +7,11 @@ logging.file.name=vehicle-inventory.logspring.application.name=fleet-manager
 #spring.datasource.username=root
 #spring.datasource.password=root
 
-# Hibernate Configuration
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
 # MySQL Database Configuration
-#spring.datasource.url=jdbc:mysql://fleetmanager.cb8yaoqcqd1e.us-east-2.rds.amazonaws.com:3306/fleet_manager?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.url=jdbc:mysql://localhost:3306/fleet_manager?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://fleetmanager.cduuc8a4e2kv.us-east-2.rds.amazonaws.com:3306/fleetmanager?useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/fleet_manager?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=Pranjal@23
+spring.datasource.password=Ded12jky+
 
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
