--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,37 +1,3 @@
-logging.level.root=INFO
-logging.level.org.springframework.web=DEBUG
-logging.file.name=vehicle-inventory.logspring.application.name=fleet-manager
+spring.application.name=fleet-manager
 
-# MySQL Database Configuration
-#spring.datasource.url=jdbc:mysql://localhost:3306/fleet_manager?useSSL=false&allowPublicKeyRetrieval=true
-#spring.datasource.username=root
-#spring.datasource.password=root
-
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://fleetmanager.cduuc8a4e2kv.us-east-2.rds.amazonaws.com:3306/fleetmanager?useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true
-#spring.datasource.url=jdbc:mysql://localhost:3306/fleet_manager?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=Ded12jky+
-
-# Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-# Actuator
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
-
-# Logging
-logging.level.org.springframework=INFO
-#logging.file.name=vehicle-inventory.log
-
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-logging.level.org.springframework.cache=DEBUG
-
-management.endpoints.web.base-path=/inventory
-management.endpoints.web.path-mapping.health=apphealth
-
-
+spring.profiles.active=local
