--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -6,8 +6,14 @@ logging.file.name=authorization-service.log
 
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://fleetmanager.cduuc8a4e2kv.us-east-2.rds.amazonaws.com:3306/fleetmanager?useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true
-spring.datasource.username=root
-spring.datasource.password=Ded12jky+
+#spring.datasource.username=root
+#spring.datasource.password=${DB_PASSWORD}
+
+#spring.datasource.url=${DB_URL}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
@@ -25,6 +31,12 @@ logging.level.org.springframework.scheduling=DEBUG
 server.port=5000
 
 cors.allowed-origins=http://localhost:4200,http://vehicle-inventory-client.s3-website.us-east-2.amazonaws.com
+#aws.secretsmanager.secretName=prd/testsecret
+#aws.region=us-east-2
+cloud.aws.credentials.access-key=
+cloud.aws.credentials.secret-key=
+
+logging.level.software.amazon.awssdk=DEBUG
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
