--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -1,11 +1,11 @@
 spring.application.name=fleet-manager
 
 logging.level.root=INFO
-logging.level.org.springframework.web=DEBUG
-logging.file.name=authorization-service.log
+logging.level.org.springframework.web=INFO
+#logging.file.name=fleet-manager-service.log
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://fleetmanager.cduuc8a4e2kv.us-east-2.rds.amazonaws.com:3306/fleetmanager?useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true
+#spring.datasource.url=jdbc:mysql://fleetmanager.cduuc8a4e2kv.us-east-2.rds.amazonaws.com:3306/fleetmanager?useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true
 #spring.datasource.username=root
 #spring.datasource.password=${DB_PASSWORD}
 
@@ -23,14 +23,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # Logging
 logging.level.org.springframework=INFO
 
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=INFO
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-logging.level.org.springframework.scheduling=DEBUG
+logging.level.org.springframework.scheduling=INFO
 
 server.port=5000
 
-cors.allowed-origins=http://localhost:4200,http://vehicle-inventory-client.s3-website.us-east-2.amazonaws.com
+cors.allowed-origins=http://localhost:4200,http://vehicle-inventory-client.s3-website.us-east-2.amazonaws.com,http://fleet-manager-prd.us-east-2.elasticbeanstalk.com,http://inventory-service-prd.us-east-2.elasticbeanstalk.com
 #aws.secretsmanager.secretName=prd/testsecret
 #aws.region=us-east-2
 cloud.aws.credentials.access-key=
