--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -33,8 +33,8 @@ server.port=5000
 cors.allowed-origins=http://localhost:4200,http://vehicle-inventory-client.s3-website.us-east-2.amazonaws.com,http://fleet-manager-prd.us-east-2.elasticbeanstalk.com,http://inventory-service-prd.us-east-2.elasticbeanstalk.com
 #aws.secretsmanager.secretName=prd/testsecret
 #aws.region=us-east-2
-cloud.aws.credentials.access-key=${{ secrets.AWS_CLOUD_ACCESS_KEY }}
-cloud.aws.credentials.secret-key=${{ secrets.AWS_SECRET_KEY }}
+cloud.aws.credentials.access-key=${AWS_CLOUD_ACCESS_KEY}
+cloud.aws.credentials.secret-key=${AWS_SECRET_KEY}
 
 logging.level.software.amazon.awssdk=DEBUG
 
