--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -34,6 +34,9 @@ cors.allowed-origins=http://localhost:4200,http://vehicle-inventory-client.s3-we
 #aws.secretsmanager.secretName=prd/testsecret
 #aws.region=us-east-2
 
+cloud.aws.credentials.access-key=AKIAQAYAVMMH23H5E5MX
+cloud.aws.credentials.secret-key=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
+
 logging.level.software.amazon.awssdk=DEBUG
 
 spring.mail.host=smtp.gmail.com
