--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -30,7 +30,7 @@ logging.level.org.springframework.scheduling=INFO
 
 server.port=8081
 
-cors.allowed-origins=http://localhost:4200,http://vehicle-inventory-client.s3-website.us-east-2.amazonaws.com,http://fleet-manager-prd.us-east-2.elasticbeanstalk.com,http://inventory-service-prd.us-east-2.elasticbeanstalk.com,https://api.fleet-manager.in,https://auth.fleet-manager.in,https://app.fleet-manager.in
+cors.allowed-origins=http://localhost:4200,http://vehicle-inventory-client.s3-website.us-east-2.amazonaws.com,http://fleet-manager-prd.us-east-2.elasticbeanstalk.com,http://inventory-service-prd.us-east-2.elasticbeanstalk.com,https://fleet-manager.in,https://auth.fleet-manager.in,https://app.fleet-manager.in
 #aws.secretsmanager.secretName=prd/testsecret
 #aws.region=us-east-2
 
