--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,10 @@
 			<artifactId>jackson-dataformat-csv</artifactId>
 			<version>2.15.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
