--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -7,7 +7,7 @@ logging.file.name=authorization-service.log
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/fleet_manager?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=Ded12jky+
+spring.datasource.password=Prajal@23
 
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
@@ -25,7 +25,9 @@ logging.level.org.springframework.scheduling=DEBUG
 cors.allowed-origins=http://localhost:4200,http://vehicle-inventory-client.s3-website.us-east-2.amazonaws.com
 
 
-server.port=8080
+server.port=8081
+
+app.email.url=http://localhost:4200
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
