--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -15,6 +15,8 @@ logging.level.org.springframework.web=INFO
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
+
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -39,10 +41,12 @@ cloud.aws.credentials.secret-key=odt9xUtFuLALBWuMVtrHYKbeBLJDH1SHAGGSHAa1
 
 logging.level.software.amazon.awssdk=DEBUG
 
+app.email.url=http://localhost:4200
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=fleet.manager.mp@gmail.com
-spring.mail.password=ghzv kdgt smex nlqs
+spring.mail.password=lezp yqrj xoxr jxmp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
