--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.application.name=fleet-manager
 spring.profiles.active=prd
 
 spring.main.allow-bean-definition-overriding=true
+
+server.address=0.0.0.0
+server.port=8081
