--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -9,9 +9,9 @@ logging.level.org.springframework.web=INFO
 #spring.datasource.username=root
 #spring.datasource.password=${DB_PASSWORD}
 
-#spring.datasource.url=${DB_URL}
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
@@ -32,16 +32,13 @@ logging.level.org.springframework.scheduling=INFO
 
 server.port=8081
 
-cors.allowed-origins=http://52.66.207.66:4200,https://52.66.207.66:4200,https://52.66.207.66:443,https://fleet-manager.in:4200,http://vehicle-inventory-client.s3-website.us-east-2.amazonaws.com,http://fleet-manager-prd.us-east-2.elasticbeanstalk.com,http://inventory-service-prd.us-east-2.elasticbeanstalk.com,https://fleet-manager.in
+cors.allowed-origins=http://139.84.150.78:4200,https://fleet-manager.in
 #aws.secretsmanager.secretName=prd/testsecret
 #aws.region=us-east-2
 
-cloud.aws.credentials.access-key=AKIAQAYAVMMH23H5E5MX
-cloud.aws.credentials.secret-key=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
-
 logging.level.software.amazon.awssdk=DEBUG
 
-app.email.url=http://localhost:4200
+app.email.url=http://139.84.150.78:4200
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
