--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -9,9 +9,9 @@ logging.level.org.springframework.web=INFO
 #spring.datasource.username=root
 #spring.datasource.password=${DB_PASSWORD}
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://52.66.207.66:3306/fleetmanager?useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=Ded12jky+
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
