updated upl for email reset

--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -32,13 +32,13 @@ logging.level.org.springframework.scheduling=INFO
 
 server.port=8081
 
-cors.allowed-origins=http://139.84.150.78:4200,https://fleet-manager.in
+cors.allowed-origins=http://localhost:4200,https://fleet-manager.in
 #aws.secretsmanager.secretName=prd/testsecret
 #aws.region=us-east-2
 
 logging.level.software.amazon.awssdk=DEBUG
 
-app.email.url=http://139.84.150.78:4200
+app.email.url=https://fleet-manager.in
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
