code changes for new requirement

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=fleet-manager
 
-spring.profiles.active=prd
+spring.profiles.active=local
 
 spring.main.allow-bean-definition-overriding=true
 
