--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,13 +1,13 @@
 spring.application.name=fleet-manager
 
-logging.level.root=INFO
-logging.level.org.springframework.web=DEBUG
-logging.file.name=authorization-service.log
+#logging.level.root=INFO
+#logging.level.org.springframework.web=DEBUG
+#logging.file.name=authorization-service.log
 
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/fleet_manager?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=Prajal@23
+spring.datasource.password=Pranjal@23
 
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
@@ -32,7 +32,7 @@ app.email.url=http://localhost:4200
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=fleet.manager.mp@gmail.com
-spring.mail.password=ghzv kdgt smex nlqs
+spring.mail.password=lezp yqrj xoxr jxmp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
